module(
    name = "z3",
    version = "4.15.4",  # TODO: Read from VERSION.txt - currently manual sync required
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(name = "rules_foreign_cc", version = "4.15.4")
bazel_dep(name = "rules_license", version = "4.15.4")

# Enables formatting all Bazel files (.bazel, .bzl) by running:
# ```bash
# bazel run -- \
#   @buildifier_prebuilt//:buildifier --lint=fix -r $(bazel info workspace)
# ```
bazel_dep(
    name = "buildifier_prebuilt",
    version = "4.15.4",
    dev_dependency = True,
)

bazel_dep(name = "platforms", version = "4.15.4")
