module(
    name = "z3",
    version = "4.17.0",  # TODO: Read from VERSION.txt - currently manual sync required
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_python", version = "2.0.0")

# Enables formatting all Bazel files (.bazel, .bzl) by running:
# ```bash
# bazel run -- \
#   @buildifier_prebuilt//:buildifier --lint=fix -r $(bazel info workspace)
# ```
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.1",
    dev_dependency = True,
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")
